--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Main page</title>
+    <title>Main page.</title>
 
     <link rel="stylesheet" href="Source/css/normalize.css">
     <link rel="stylesheet" href="Source/css/grid.css">
