Css DRY optimization.

--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Main page.</title>
 
-    <link rel="stylesheet" href="Source/css/normalize.css">
-    <link rel="stylesheet" href="Source/css/grid.css">
-    <link rel="stylesheet" href="Source/css/ionicons.min.css">
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/grid.css">
+    <link rel="stylesheet" href="/assets/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="queries.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
 
   </head>
 
   <body>
-    <header class="header1">
+    <header class="header">
 
       <div class="row">
-        <img src="Source/images/logo1.png" alt="My logo" class="logo-main">
+        <img src="/assets/images/logo1.png" alt="My logo" class="logo-main">
         <ul class="main-nav js--main-nav">
-          <li class="nu"><a href="portfolio.html">My Portfolio</a></li>
-          <li><a href="about_me.html">About me</a></li>
-          <li class="aim"><a href="index.html">Home</a></li>
+          <li class="nu"><a href="/portfolio.html">My Portfolio</a></li>
+          <li><a href="/about_me.html">About me</a></li>
+          <li class="aim"><a href="/index.html">Home</a></li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
       </div>
@@ -40,13 +41,33 @@
     </header>
 
 
-
-
+    <div class="row">
+      <div class="col-4">
+        test
+      </div>
+      <div class="col-4">
+        test
+      </div>
+      <div class="col-4">
+        test
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        test
+      </div>
+      <div class="col-4">
+        test
+      </div>
+      <div class="col-4">
+        test
+      </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-    <script src="script.js">
+    <script src="assets/js/script.js">
 
     </script>
   </body>
