--- a/portfolio.html
+++ b/portfolio.html
@@ -3,23 +3,24 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="Source/css/normalize.css">
-    <link rel="stylesheet" href="Source/css/grid.css">
-    <link rel="stylesheet" href="Source/css/ionicons.min.css">
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/grid.css">
+    <link rel="stylesheet" href="/assets/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="queries3.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
   </head>
 
   <body>
-    <header class="header3">
+    <header class="header">
       <div class="row">
-        <img src="Source/images/logo1.png" alt="My logo" class="logo-main">
+        <img src="/assets/images/logo1.png" alt="My logo" class="logo-main">
         <ul class="main-nav js--main-nav">
-          <li class="nu"><a href="portfolio.html">My Portfolio</a></li>
-          <li><a href="about_me.html">About me</a></li>
-          <li><a href="index.html">Home</a></li>
+          <li class="nu"><a href="/portfolio.html">My Portfolio</a></li>
+          <li><a href="/about_me.html">About me</a></li>
+          <li><a href="/index.html">Home</a></li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
       </div>
@@ -135,7 +136,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="portfolio.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 
 </html>
