--- a/about_me.html
+++ b/about_me.html
@@ -3,25 +3,26 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About me</title>
 
-    <link rel="stylesheet" href="Source/css/normalize.css">
-    <link rel="stylesheet" href="Source/css/grid.css">
-    <link rel="stylesheet" href="Source/css/ionicons.min.css">
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/grid.css">
+    <link rel="stylesheet" href="/assets/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="queries2.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
   </head>
 
   <body>
-    <header class="header2">
+    <header class="header">
 
       <div class="row">
-        <img src="Source/images/logo1.png" alt="My logo" class="logo-main">
+        <img src="/assets/images/logo1.png" alt="My logo" class="logo-main">
         <ul class="main-nav js--main-nav">
-          <li class="nu"><a href="portfolio.html">My Portfolio</a></li>
-          <li class="aim"><a href="about_me.html">About me</a></li>
-          <li><a href="index.html">Home</a></li>
+          <li class="nu"><a href="/portfolio.html">My Portfolio</a></li>
+          <li class="aim"><a href="/about_me.html">About me</a></li>
+          <li><a href="/index.html">Home</a></li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
       </div>
@@ -46,14 +47,14 @@
         </div>
         <div class="col span-1-of-2">
           <figure>
-            <img src="Source/images/Ruse.jpg" alt="Ruse town" class="ruse-img">
+            <img src="assets/images/Ruse.jpg" alt="Ruse town" class="ruse-img">
           </figure>
         </div>
       </div>
       <div class="row">
         <div class="col span-1-of-2">
           <figure>
-            <img src="Source/images/varna.jpg" alt="Varna" class="varna-img">
+            <img src="assets/images/varna.jpg" alt="Varna" class="varna-img">
           </figure>
         </div>
         <div class="col span-1-of-2 study-place">
@@ -88,7 +89,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="aboutme.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 
 </html>
